[package]
name = "unifont"
version = "0.1.0"
edition = "2021"
build = "build.rs"
authors = ["Mate Kovacs <mkovaxx@gmail.com>"]
description = "Provides a monochrome Unicode bitmap font. Halfwidth glyphs are 8x16, fullwidth are 16x16 pixels."
homepage = "https://gitlab.com/mkovacs/unifont-rs"
repository = "https://gitlab.com/mkovacs/unifont-rs"
readme = "README.md"
license = "MIT"
keywords = ["monochrome", "unicode", "bitmap", "font"]
categories = ["encoding"]
exclude = [".gitignore"]

[dev-dependencies]
clap = { version = "4.5.3", features = ["derive"] }
