[package]
name = "unifont"
version = "1.0.0+data-15.1.05"
edition = "2021"
build = "build.rs"
authors = ["The Unifont-rs Contributors"]
description = "Provides a monochrome Unicode bitmap font. Halfwidth glyphs are 8x16, fullwidth are 16x16 pixels."
homepage = "https://github.com/mkovaxx/unifont-rs"
repository = "https://github.com/mkovaxx/unifont-rs"
readme = "README.md"
license = "MIT"
keywords = ["monochrome", "unicode", "bitmap", "font"]
categories = ["encoding"]
exclude = [".gitignore"]
build-std = ["core", "alloc"]

[dev-dependencies]
unicode-bidi = { version = "0.3.15", default-features = false, features = ["hardcoded-data"] }
clap = { version = "4.5.3", features = ["derive"] }

[dependencies]
